# irisc-asm

./: .gitignore  64bit_alu_branch_test.asm  Cargo.toml  irisc_asm.py  test.asm
src/: assembler.rs  fields.rs  instruction.rs  instructions.rs  lib.rs  main.rs  utils.rs
